# personal-media-web-app

./: .env.example  .gitignore  Caddyfile  ecosystem.config.cjs  pyproject.toml
app/: config.py  main.py  paths.py
app/auth/: dependencies.py  password.py  rate_limit.py  session.py
app/db/: connection.py  schema.py
app/jobs/: models.py  processors.py  repository.py  worker.py
app/media/: audio_converter.py  commands.py  piper_tts.py  tiktok_downloader.py  transcriber.py  vieneu_tts.py
app/routes/: auth.py  files.py  jobs.py  pages.py
app/static/: app.css  app.js
app/templates/: base.html  dashboard.html  login.html
app/templates/partials/: job-detail.html  jobs-table.html
personal_media_web_app.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: backup-data.sh  cleanup-outputs.py  install-piper-voice.py  start-all.sh  start-web.sh  start-worker.sh
tests/: test_auth.py  test_config.py  test_files.py  test_jobs.py  test_tiktok_validation.py  test_tts_validation.py
