[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "personal-media-web-app"
version = "0.1.0"
description = "Personal media web app for TikTok extraction and local text to speech"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "jinja2>=3.1.0",
  "python-multipart>=0.0.9",
  "itsdangerous>=2.2.0",
  "python-dotenv>=1.0.0",
  "yt-dlp>=2025.1.0",
  "faster-whisper>=1.1.0",
  "piper-tts>=1.4.2"
]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["data*", "tests*"]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.0.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
